For now, only support googleplay

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 const MARKET_LINK = "market://details?id=" + PACKAGE_NAME;
                 const CAFEBAZAAR_LINK = "https://cafebazaar.ir/app/" + PACKAGE_NAME;
                 const MYKET_LINK = "https://myket.ir/app/" + PACKAGE_NAME;
+                const USE_GOOGLE_PLAY_FALLBACK = true; // If app not installed, fallback to Google Play only
                 
                 const isIOS = /iPad|iPhone|iPod/.test(userAgent) && !window.MSStream;
                 const isAndroid = /android/i.test(userAgent);
@@ -197,12 +198,17 @@
                             }
                         }, 2500);
                     } else if (isAndroid) {
-                        // For Android, use the proven approach from original 404.html
-                        // Open the market link directly
+                        // For Android, first try opening the app via market://
                         window.location.href = MARKET_LINK;
 
-                        // Fallback to Google Play if the app is not installed (but user said to drop this)
-                        // Keeping it simple - just try market://
+                        // If the app is not installed, optionally fall back to Google Play
+                        if (USE_GOOGLE_PLAY_FALLBACK) {
+                            setTimeout(function() {
+                                if (!appOpened && document.visibilityState === 'visible') {
+                                    window.location.href = PLAY_STORE_LINK;
+                                }
+                            }, 2000);
+                        }
                     } else {
                         // On desktop, show message immediately
                         alert('این بازی فقط برای موبایل در دسترس است. لطفا از طریق اپ استور یا گوگل پلی دانلود کنید.');
@@ -213,7 +219,7 @@
                     const checkAppOpened = function() {
                         appOpened = true;
                         // Only close the opened window for Android (iOS doesn't use window.open)
-                        if (isAndroid && newWindow && !newWindow.closed) {
+                        if (isAndroid && typeof newWindow !== 'undefined' && newWindow && !newWindow.closed) {
                             newWindow.close();
                         }
                     };
