Add og:image dimensions

--- a/index.html
+++ b/index.html
@@ -255,6 +255,8 @@
     <meta property="og:description" content="بازی پازل واژه‌ای رایگان و آفلاین. با ۶ شانس کلمه را حدس بزنید و مهارت خود را بسنجید.">
     <meta property="og:url" content="https://playwordle.flyingacorn.studio/">
     <meta property="og:image" content="https://playwordle.flyingacorn.studio/assets/images/Cover.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="کاور بازی واژه باف">
     <meta property="og:site_name" content="واژه باف - Wordloom">
     <meta property="og:locale" content="fa_IR">
