--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 // Constants for URLs
                 const PACKAGE_NAME = "com.FlyingAcorn.Wordle";
                 const BASE_URL = "https://playwordle.flyingacorn.studio";
-                const APP_STORE_LINK = "https://apps.apple.com/us/app/id6748600347";
+                const APP_STORE_LINK = "https://apps.apple.com/us/app/%D9%88%D8%A7%DA%98%D9%87-%D8%A8%D8%A7%D9%81/id6749933008";
                 const PLAY_STORE_LINK = "https://play.google.com/store/apps/details?id=" + PACKAGE_NAME;
                 const MARKET_LINK = "market://details?id=" + PACKAGE_NAME;
                 const CAFEBAZAAR_LINK = "https://cafebazaar.ir/app/" + PACKAGE_NAME;
@@ -303,9 +303,9 @@
                 <a href="https://play.google.com/store/apps/details?id=com.FlyingAcorn.Wordle" class="btn download-btn" target="_blank" rel="noopener">
                     <img src="assets/images/icons/googleplay.svg" alt="گوگل پلی" class="responsive-icon"> گوگل پلی
                 </a>
-                <!-- <a href="https://apps.apple.com/us/app/%D9%88%D8%A7%DA%98%D9%87-%D8%A8%D8%A7%D9%81/id6749933008" class="btn download-btn" target="_blank" rel="noopener">
+                <a href="https://apps.apple.com/us/app/%D9%88%D8%A7%DA%98%D9%87-%D8%A8%D8%A7%D9%81/id6749933008" class="btn download-btn" target="_blank" rel="noopener">
                     <img src="assets/images/icons/appstore.svg" alt="اپ استور" class="responsive-icon"> اپ استور
-                </a> -->
+                </a>
             </div>
             
         </section>
